corrigindo build failure do mvn test em jdk mais novo